# sharadvikram.com

./: .bowerrc  .gitignore  .gitmodules  Gruntfile.js  Makefile  Pipfile  Procfile  README  app.json  bower.json  package.json  post_process.py  posts.json  projects.json  pyproject.toml  requirements.txt  run.py  setup.py  shell.nix
.github/workflows/: main.yml
notebooks/: Ray_Marching_Blog_Post.ipynb
posts/: bayesian-classifier.md  dtw-dna.md  post.md  post2.md
projects/: orangecube.md  phoneoctoninja.md  quizbowldb.md  sharadvikram.com.md  toasterjs.md
public/: Ray_Marching_Blog_Post.ipynb  Ray_Marching_Blog_Post.md  error.html  index.html
public/css/: blog.css  home.css  layout.css  projects.css
public/js/: 1000G.benign.indel.vcf  app.js  controllers.js  index.js  marked.js
public/notebooks/: Ray_Marching_Blog_Post.ipynb  Ray_Marching_Blog_Post.md  Ray_Marching_Blog_Post.py
scripts/: build_notebooks.py
server/: api.js  api.py  app.js  constants.js  dao.js  model.js  posts.js  projects.js  reader.js  routes.js  rss.js  server.js  server.py  urls.py  util.js
server/rng/: __init__.py
server/views/: blog.jade  index.ejs  index.jade  layout.ejs  layout.jade  post.ejs
src/: App.css  App.js  Section.css  index.css
src/AboutMe/: AboutMe.css  AboutMe.js  Icon.css  Icon.js  Icons.css
src/Blog/: Blog.css  Blog.js  BlogPost.js
src/Components/: CodeBlock.js  Markdown.component.js
sv/: __init__.py  app.py  server.py  urls.py
views/: about.jade  base.jade  blog.jade  home.jade  home_layout.jade  layout.jade  post.jade  projects.jade  teaching.jade
(+64 files in other folders)
