[tool.poetry]
name = "sharadvikram.com"
version = "0.1.0"
description = ""
authors = ["Sharad Vikram <sharad.vikram@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
jupyter = "^1.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
